zig/zig-zon-plugin-impl/grammar/Zon.bnf
// Copyright Copyright 2024 ZigIDE and contributors. Use of this source code is governed by the Apache 2.0 license.
{
  parserClass="zigzen.lang.parser.ZonParser"

  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="Zon"
  psiImplClassSuffix="Impl"
  psiPackage="zigzen.psi"
  psiImplPackage="zigzen.psi.impl"

  elementTypeHolderClass="zigzen.psi.ZonTypes"
  elementTypeClass="zigzen.psi.ZonElementType"
  tokenTypeClass="zigzen.psi.ZonTokenType"
  tokens=[
    DOT='.'
    LBRACE='{'
    RBRACE='}'
    EQUAL='='
    COMMA=','
    COMMENT='comment'
    ID='identifier'
    STRING_LITERAL_SINGLE='string'
    LINE_STRING='multiline string'
    BAD_STRING='unterminated string'
  ]

  psiImplUtilClass="zigzen.psi.impl.ZonPsiImplUtils"

  mixin("Struct") = "zigzen.psi.mixin.impl.ZonStructMixinImpl"
  implements("Struct") = "zigzen.psi.mixin.ZonStructMixin"

  implements(".*")="zigzen.psi.ZonElement"
}

Root ::= Struct

Struct ::= DOT LBRACE (StructStringArray | StructPropertyMap | ()) RBRACE {
  methods=[
    getPresentation
  ]
}

StructPropertyMap ::= (StructProperty | IncompleteStructProperty) (COMMA (IncompleteStructProperty? StructProperty IncompleteStructProperty? | IncompleteStructProperty))* COMMA?

StructStringArray ::= STRING_LITERAL (COMMA STRING_LITERAL)* COMMA?

StructProperty ::= DOT Identifier EQUAL StructPropertyValue {
  methods=[
    getPresentation
  ]
}

Identifier ::= ID

IncompleteStructProperty ::= DOT? COMPLETION_DUMMY

private StructPropertyValue ::= Struct | STRING_LITERAL

STRING_LITERAL ::= STRING_LITERAL_SINGLE | LINE_STRING+
